FrontEnd: testes e começo do código para criar as hierarquias entre step e stepParent. Backend: ajustes de alguns erros de inserção.

--- a/front-flowcharts/src/app/core/pages/flowcharts-page/flowcharts-page.component.css
+++ b/front-flowcharts/src/app/core/pages/flowcharts-page/flowcharts-page.component.css
@@ -12,3 +12,12 @@
 h1 {
     text-align: center;
 }
+span {
+    margin-right: 10px;
+    font-size: 20px;
+}
+select {
+    border: solid 1px white;
+    outline: 0;
+    font-size: 20px;
+}
