--- a/front-flowcharts/src/app/core/pages/flowcharts-page/flowcharts-page.component.css
+++ b/front-flowcharts/src/app/core/pages/flowcharts-page/flowcharts-page.component.css
@@ -8,6 +8,8 @@
     border: solid 1px black;
     border-radius: 10px;
     padding: 10px;
+    height: min-content;
+    width: min-content;
 }
 h1 {
     text-align: center;
