criando dinamicamente com problema de duplicação

--- a/front-flowcharts/src/app/core/pages/flowcharts-page/flowcharts-page.component.html
+++ b/front-flowcharts/src/app/core/pages/flowcharts-page/flowcharts-page.component.html
@@ -3,37 +3,4 @@
 <select  [(ngModel)]="flowchartId" (change)="getFlowchartStructure()" name="flowcharts" id="flowcharts">
     <option [value]="flowchart.id" *ngFor="let flowchart of flowcharts">{{flowchart.title}}</option>
 </select>
-<div id="flowchart">
-    <div *ngFor="let step of flowchartStructure" class="steps" id="{{step.id}}">
-        <span>{{step.title}}</span>
-        <button>+</button>
-    </div>
-</div>
-
-<h1>Teste</h1>
-
-<div #flowchart>
-    <div class="conjunto">
-        <div class="steps" id="26">
-            <span>pai1</span>
-        </div>
-        <div class="filhos">
-            <div class="steps" id="33">
-                <span>filho1</span>
-            </div>
-            <div class="conjunto">
-                <div class="steps" id="34">
-                    <span>filho2</span>
-                </div>
-                <div class="filhos">
-                    <div class="steps" id="34">
-                        <span>filhoDoFilho1</span>
-                    </div>
-                    <div class="steps" id="34">
-                        <span>filhoDoFilho2</span>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
+<div #flowchart></div>
