Repensar da lógica e criando steps dinaminacamente.

--- a/front-flowcharts/src/app/core/pages/flowcharts-page/flowcharts-page.component.html
+++ b/front-flowcharts/src/app/core/pages/flowcharts-page/flowcharts-page.component.html
@@ -3,4 +3,4 @@
 <select  [(ngModel)]="flowchartId" (change)="getFlowchartStructure()" name="flowcharts" id="flowcharts">
     <option [value]="flowchart.id" *ngFor="let flowchart of flowcharts">{{flowchart.title}}</option>
 </select>
-<div #flowchart></div>
+<div #flowchart id="flowchart"></div>
