--- a/front-flowcharts/src/app/core/pages/flowcharts-page/flowcharts-page.component.css
+++ b/front-flowcharts/src/app/core/pages/flowcharts-page/flowcharts-page.component.css
@@ -3,13 +3,22 @@
     flex-direction: column;
     align-items: center;
 }
+div {
+    border: solid 1px red;
+}
+/* .overSteps {
+    display: flex;
+    flex-direction: column;
+} */
 .steps {
     margin: 20px 0px;
-    border: solid 1px black;
     border-radius: 10px;
     padding: 10px;
     height: min-content;
-    width: min-content;
+    flex-grow: 2;
+}
+.groupChildren {
+    display: flex;
 }
 h1 {
     text-align: center;
