estilizando e concertando o typescript de flowcharts (particalmente: erro ainda persiste).

--- a/front-flowcharts/src/app/core/pages/flowcharts-page/flowcharts-page.component.html
+++ b/front-flowcharts/src/app/core/pages/flowcharts-page/flowcharts-page.component.html
@@ -1,4 +1,4 @@
-<h1>Flowchart Test</h1>
+<h1>Flowcharts</h1>
 <span>Flowchart name:</span>
 <select  [(ngModel)]="flowchartId" (change)="setFlowchartStructure()" name="flowcharts" id="flowcharts">
     <option [value]="flowchart.id" *ngFor="let flowchart of flowcharts">{{flowchart.title}}</option>
