--- a/front-flowcharts/src/app/core/pages/flowcharts-page/flowcharts-page.component.css
+++ b/front-flowcharts/src/app/core/pages/flowcharts-page/flowcharts-page.component.css
@@ -2,20 +2,21 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-top: 20px;
 }
-div {
-    border: solid 1px red;
+.overSteps {
+    /* display: flex; */
+    /* flex-direction: column; */
+    height: min-content;
 }
-/* .overSteps {
-    display: flex;
-    flex-direction: column;
-} */
 .steps {
-    margin: 20px 0px;
+    margin: 20px;
     border-radius: 10px;
     padding: 10px;
     height: min-content;
     flex-grow: 2;
+    border: solid 2px purple;
+    text-align: center;
 }
 .groupChildren {
     display: flex;
@@ -28,7 +29,9 @@ span {
     font-size: 20px;
 }
 select {
-    border: solid 1px white;
+    background-color: rgb(20, 20, 20);
+    color: white;
+    border: none;
     outline: 0;
     font-size: 20px;
 }
