--- a/front-flowcharts/src/styles.css
+++ b/front-flowcharts/src/styles.css
@@ -1,1 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
+body {
+    background-color: rgb(20, 20, 20);
+}
+span, h1 {
+    color: white;
+}
