--- a/front-flowcharts/src/app/core/pages/flowcharts-page/flowcharts-page.component.css
+++ b/front-flowcharts/src/app/core/pages/flowcharts-page/flowcharts-page.component.css
@@ -5,16 +5,14 @@
     margin-top: 20px;
 }
 .overSteps {
-    /* display: flex; */
-    /* flex-direction: column; */
     height: min-content;
+    width: 100%;
 }
 .steps {
     margin: 20px;
     border-radius: 10px;
     padding: 10px;
     height: min-content;
-    flex-grow: 2;
     border: solid 2px purple;
     text-align: center;
 }
@@ -34,4 +32,76 @@ select {
     border: none;
     outline: 0;
     font-size: 20px;
+}
+
+#modal {
+    display: none; 
+    position: fixed;
+    z-index: 1; 
+    left: 0;
+    top: 0;
+    width: 100%; 
+    height: 100%; 
+    overflow: auto; 
+    background-color: rgb(0,0,0); 
+    background-color: rgba(0,0,0,0.4); 
+}
+
+.modal-content {
+    border-radius: 5px;
+    background-color: #7a7575fa;
+    margin: 5% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: max-content;
+}
+
+.modalOn {
+    display: block !important;
+    position: absolute;
+    right: 50%;
+}
+
+#modalForm {
+    display: flex;
+    flex-direction: column;
+}
+
+#stepTitle {
+    background-color: transparent;
+    border: none;
+    border-bottom: solid 1px black;
+    font-size: 1rem;
+    outline: 0;
+    color: white;
+}
+
+#stepTitle::placeholder {
+    color: white;
+}
+
+#modalButtons {
+    margin-top: 15px;
+    display: flex;
+    justify-content: space-between;
+}
+
+#submitButton {
+    background-color: rgb(0, 150, 0);
+    border-radius: 10px;
+    padding: 5px 10px;
+    color: white;
+    border: solid 1px transparent;
+    font-size: 0.8rem;
+    font-weight: bold;
+    /* margin-right: 10px; */
+}
+
+#backButton {
+    background-color: red;
+    border-radius: 10px;
+    padding: 5px 10px;
+    color: white;
+    font-weight: bold;
+    border: solid 1px transparent;
 }
