--- a/front-flowcharts/src/app/core/partials/nav-bar/nav-bar.component.html
+++ b/front-flowcharts/src/app/core/partials/nav-bar/nav-bar.component.html
@@ -2,12 +2,12 @@
     <div>
         <ul>
             <li>
-                <a routerLink="['/flowcharts-manage']" routerLinkActive="router-link-active">
+                <a routerLink="/" routerLinkActive="router-link-active">
                     Manage Flowcharts
                 </a>
             </li>
             <li>
-                <a routerLink="'flowchartList'" routerLinkActive="router-link-active">
+                <a routerLink="/flowchartList" routerLinkActive="router-link-active">
                     See Flowcharts
                 </a>
             </li>
