--- a/front-flowcharts/src/app/core/pages/flowcharts-page/flowcharts-page.component.css
+++ b/front-flowcharts/src/app/core/pages/flowcharts-page/flowcharts-page.component.css
@@ -1,7 +1,7 @@
 #flowchart {
     display: flex;
-    flex-direction: column;
-    align-items: center;
+    flex-direction: row;
+    /* flex-direction: column; */
     margin-top: 20px;
 }
 .overSteps {
@@ -33,6 +33,7 @@ select {
 }
 .selectDiv {
     margin-left: 50px;
+    margin-bottom: 25px;
 }
 .selectDiv span {
     font-size: 23px;
