--- a/front-flowcharts/src/app/core/pages/flowcharts-manage/flowcharts-manage.component.css
+++ b/front-flowcharts/src/app/core/pages/flowcharts-manage/flowcharts-manage.component.css
@@ -7,7 +7,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 30px;
+    width: 100%;
 }
 
 .flowchartHead {
@@ -15,6 +15,10 @@
     width: 100%;
     justify-content: space-between;
     align-items: center;
+}
+
+.flowchartHead>* {
+    margin: 20px;
 }
 
 .flowchartHead h2 {
@@ -31,6 +35,7 @@
 
 .flowchartHead span {
     margin: 10px;
+    font-size: medium;
 }
 
 .flowchartHead img{
@@ -39,6 +44,7 @@
 
 .manageTable {
     border-collapse: collapse;
+    width: 100%;
 }
 
 .manageTable tr:nth-child(even){background-color: #444444;}
@@ -141,4 +147,13 @@
     font-size: 0.8rem;
     font-weight: bold;
     border: solid transparent;
+}
+
+.searchBar input{
+    background-color: transparent;
+    border: none;
+    border-bottom: solid 1px white;
+    font-size: large;
+    color: white;
+    outline: 0;
 }
