--- a/front-flowcharts/src/app/core/pages/flowcharts-manage/flowcharts-manage.component.html
+++ b/front-flowcharts/src/app/core/pages/flowcharts-manage/flowcharts-manage.component.html
@@ -17,33 +17,9 @@
     <div id="manageContent">
         <div class="flowchartHead">
             <h2>Flowchart Management</h2>
-            <div>
-                <button (click)="callModal()">
-                    <img class="icons" src="assets/images/plus-sign.png" alt="plus sign">
-                    <span>Add new flowchart!</span>
-                </button>
+            <div class="searchBar">
+                <input type="text" name="search" id="search" [(ngModel)]="searchText" placeholder="Seach by id or title">
             </div>
-        </div>
-        <table class="manageTable">
-            <thead>
-                <tr>
-                    <th>#</th>
-                    <th>Title</th>
-                    <th>Created At</th>
-                    <th>Updated At</th>
-                    <th>Actions</th>
-                </tr>
-            </thead>
-            <tbody #tableBody></tbody>
-        </table>
-    </div>
-</div>
-
-<!-- 
-<div id="pageContent">
-    <div id="manageContent">
-        <div class="flowchartHead">
-            <h2>Flowchart Management</h2>
             <div>
                 <button (click)="callModal()">
                     <img class="icons" src="assets/images/plus-sign.png" alt="plus sign">
@@ -62,17 +38,17 @@
                 </tr>
             </thead>
             <tbody>
-                <tr *ngFor="let flowchart of flowcharts; index as i">
-                    <td>{{i+1}}</td>
+                <tr *ngFor="let flowchart of flowcharts | search: searchText;">  
+                    <td>{{flowchart.id}}</td>
                     <td>{{flowchart.title}}</td>
                     <td>{{flowchart.created_at}}</td>
                     <td>{{flowchart.updated_at}}</td>
                     <td>
-                        <button class="editButton" (click)="editFlowchart()"><img class="icons" src="assets/images/edit-sign.png" alt="edit sign"></button>
-                        <button class="removeButton" (click)="deleteFlowchart()"><img class="icons" src="assets/images/trash.png" alt="delete sign"></button>
+                        <button class="editButton" (click)="callEditModal(flowchart.id, flowchart.title)"><img class="icons" src="assets/images/edit-sign.png" alt="edit sign"></button>
+                        <button class="removeButton" (click)="removeFlowchart(flowchart.id)"><img class="icons" src="assets/images/trash.png" alt="delete sign"></button>
                     </td>
                 </tr>
             </tbody>
         </table>
     </div>
-</div> -->
+</div>
