Melhora no CSS (search bar, parcial responsividade, etc.)

--- a/front-flowcharts/src/app/core/pages/flowcharts-manage/flowcharts-manage.component.html
+++ b/front-flowcharts/src/app/core/pages/flowcharts-manage/flowcharts-manage.component.html
@@ -18,7 +18,8 @@
         <div class="flowchartHead">
             <h2>Flowchart Management</h2>
             <div class="searchBar">
-                <input type="text" name="search" id="search" [(ngModel)]="searchText" placeholder="Seach by id or title">
+                <input type="text" name="search" id="search" [(ngModel)]="searchText" placeholder="Seach by id or title...">
+                <img src="assets/images/search-sign.png">
             </div>
             <div>
                 <button (click)="callModal()">
