--- a/front-flowcharts/src/app/core/pages/flowcharts-manage/flowcharts-manage.component.css
+++ b/front-flowcharts/src/app/core/pages/flowcharts-manage/flowcharts-manage.component.css
@@ -4,10 +4,12 @@
 }
 
 #pageContent {
+    box-sizing: border-box;
     display: flex;
     flex-direction: column;
     align-items: center;
     width: 100%;
+    padding: 0px 40px;
 }
 
 .flowchartHead {
@@ -40,6 +42,10 @@
 
 .flowchartHead img{
     float: left;
+}
+
+#manageContent {
+    width: 100%;
 }
 
 .manageTable {
@@ -76,12 +82,12 @@
     height: 100%; 
     overflow: auto; 
     background-color: rgb(0,0,0); 
-    background-color: rgba(0,0,0,0.4); 
+    background-color: rgba(0,0,0,0.4);
 }
 
 .modal-content {
     border-radius: 5px;
-    background-color: #7a7575fa;
+    background-color: #696969fa;
     margin: 5% auto;
     padding: 20px;
     border: 1px solid #888;
@@ -149,11 +155,28 @@
     border: solid transparent;
 }
 
+.searchBar {
+    display: flex;
+    align-items: center;
+    height: 30px;
+    border: solid 1px white;
+    border-radius: 20px;
+    padding: 3px;
+}
+
 .searchBar input{
-    background-color: transparent;
     border: none;
-    border-bottom: solid 1px white;
+    background-color: transparent;
+    padding: 0px 0px 0px 10px;
     font-size: large;
     color: white;
     outline: 0;
+    width: 100%;
+    height: 100%;
+}
+
+.searchBar img {
+    box-sizing: border-box;
+    padding: 4px 12px 4px 0px;
+    height: 100%;
 }
