--- a/front-flowcharts/src/app/core/partials/nav-bar/nav-bar.component.css
+++ b/front-flowcharts/src/app/core/partials/nav-bar/nav-bar.component.css
@@ -18,3 +18,21 @@
     text-decoration: none;
     font-family: 'Courier New', Courier, monospace;
 }
+
+@media (max-width: 750px) {
+    .nav-bar a {
+        font-size: 23px;
+    }
+}
+
+@media (min-width: 1300px) {
+    .nav-bar a {
+        font-size: 28px;
+    }
+}
+
+@media (min-width: 1800px) {
+    .nav-bar a {
+        font-size: 50px;
+    }
+}
